# memz-veloren

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Project Memz.md  README.md  memz.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  veloren-rtsim-hooks.md
memz-bench/: Cargo.toml
memz-bench/benches/: memory_system.rs
memz-bench/src/: lib.rs
memz-core/: Cargo.toml
memz-core/src/: bard.rs  behavior.rs  config.rs  conflict.rs  consolidation.rs  decay.rs  embedding.rs  error.rs  eviction.rs  first_five.rs  hnsw.rs  injection.rs  lib.rs  metrics.rs  observation.rs  persistence.rs  reflection.rs  replay.rs  reputation.rs  safety.rs  social.rs  types.rs
memz-core/src/memory/: emotional.rs  episodic.rs  injected.rs  mod.rs  procedural.rs  reflective.rs  semantic.rs  social.rs
memz-core/src/retrieval/: mod.rs  scoring.rs
memz-core/tests/: integration.rs  proptest_memory.rs
memz-llm/: Cargo.toml
memz-llm/prompts/grammars/: bard_poem.gbnf  dialogue_response.gbnf  gossip_output.gbnf  reflection_output.gbnf
memz-llm/prompts/v1/: bard_composition.toml  dialogue_complex.toml  dialogue_simple.toml  gossip_generation.toml  injection_validation.toml  memory_replay.toml  memory_summary.toml  reflection.toml
memz-llm/src/: client.rs  error.rs  lib.rs  prompt.rs  queue.rs  types.rs
memz-llm/tests/: eval_golden.rs
memz-veloren/: Cargo.toml
memz-veloren/src/: bridge.rs  components.rs  config.rs  dialogue.rs  events.rs  hooks.rs  lib.rs  memory_rule.rs  rtsim_adapter.rs  systems.rs
veloren/: .gitattributes
veloren/assets/common/items/npc_weapons/unique/: quadsmallbasic.ron
veloren/assets/common/voxel/air_balloon/: structure.vox
veloren/assets/common/voxel/airship_human/: structure.vox
veloren/assets/common/voxel/carriage/: axle.vox  structure.vox
veloren/assets/common/voxel/cart/: axle.vox  structure.vox
veloren/assets/common/voxel/galleon/: structure.vox
veloren/assets/common/voxel/sail_boat/: structure.vox
veloren/assets/common/voxel/skiff/: structure.vox
veloren/assets/common/voxel/submarine/: prop.vox  rudder.vox  structure.vox
veloren/assets/common/voxel/train/: large_wheels.vox  loco.vox
veloren/assets/voxygen/voxel/armor/: alchemist.vox
veloren/assets/voxygen/voxel/armor/adventurer/: adventurer.vox
veloren/assets/voxygen/voxel/armor/ashen/: ashen.vox
veloren/assets/voxygen/voxel/armor/brinestone/: back.vox  belt.vox  chest.vox  crown.vox  foot.vox  hand.vox  pants.vox  shoulder.vox
veloren/assets/voxygen/voxel/armor/buccaneer/: buccaneer.vox
veloren/assets/voxygen/voxel/armor/cardinal/: mitre.vox
veloren/assets/voxygen/voxel/armor/chef/: hat.vox
veloren/assets/voxygen/voxel/armor/cloth/: cotton.vox  druid.vox  linen.vox  moonweave.vox  silken.vox  sunsilk.vox  woolen.vox
veloren/assets/voxygen/voxel/armor/golemite/: golemite.vox
veloren/assets/voxygen/voxel/armor/hide/: carapace.vox  dragonscale.vox  leather.vox  primal.vox  rawhide.vox  scale.vox  serpentscale.vox
veloren/assets/voxygen/voxel/armor/mail/: bloodsteel.vox  bronze.vox  cobalt.vox  iron.vox  orichalcum.vox  steel.vox
veloren/assets/voxygen/voxel/armor/miner/: chest.vox  helmet.vox  pants.vox  shoulder_captain.vox  shoulder_flame.vox  shoulder_overseer.vox
veloren/assets/voxygen/voxel/armor/pirate/: pirate.vox
veloren/assets/voxygen/voxel/armor/witch/: witch.vox
veloren/assets/voxygen/voxel/glider/: cloverleaf.vox  tephras.vox  vroom.vox
veloren/assets/voxygen/voxel/item/charms/: burning_charm.vox  frozen_charm.vox  lifesteal_charm.vox
veloren/assets/voxygen/voxel/item/consumable/: potion_agility.vox  potion_combustion.vox  potion_freezing.vox  potion_trans.vox
veloren/assets/voxygen/voxel/item/crafting/: alkahest.vox  bloodbag.vox  bloody_tear.vox  brinestone.vox  cursed_bead.vox  dwarven_battery.vox  earthern_shard.vox  golem_core.vox  golemite_slab.vox  living_embers.vox  molten_core.vox  sentient_seed.vox
veloren/assets/voxygen/voxel/item/crafting_tool/: mortar_pestle.vox
veloren/assets/voxygen/voxel/item/key/: key_bone.vox  key_glass.vox  key_haniwa.vox  key_myrmidon.vox  key_sahagin.vox  key_terracotta_chest.vox  key_terracotta_door.vox  key_vampire.vox
veloren/assets/voxygen/voxel/lantern/: bloodmoon.vox  crux.vox  delvers_lamp.vox
veloren/assets/voxygen/voxel/object/: blood_bomb.vox  crux.vox  firedrop.vox  gelid_gel.vox  gnarling_totem_green.vox  gnarling_totem_red.vox  gnarling_totem_white.vox  levin_dust.vox  mine.vox  poison_clot.vox  portal.vox  portal_active.vox  surprise_egg.vox  terracotta_demolisher_bomb.vox  terracotta_statue.vox  training_dummy.vox
veloren/assets/world/structure/jungle_ruin/: 0.vox  1.vox  10.vox  11.vox  12.vox  13.vox  14.vox  15.vox  16.vox  17.vox  18.vox  19.vox  2.vox  20.vox  21.vox  22.vox  23.vox  24.vox  25.vox  26.vox  27.vox  28.vox  29.vox  3.vox  30.vox  31.vox  32.vox  33.vox  34.vox  35.vox  36.vox  37.vox  38.vox  39.vox  4.vox  40.vox  41.vox  42.vox  43.vox  44.vox  (+27 more)
veloren/assets/world/structure/natural/: bonfire.vox  bonsai.vox
veloren/assets/world/structure/plots/: barn.vox
veloren/assets/world/structure/spots/: pirate_hideout.vox  witch-hut-black_0.vox
(+821 files in other folders)
