[workspace]
resolver = "2"
members = [
    "memz-core",
    "memz-llm",
    "memz-veloren",
    "memz-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Siddhartha"]
repository = "https://github.com/vyuh-tech/memz"
description = "Persistent memory layer for game characters — every character remembers"
keywords = ["game-ai", "npc", "memory", "llm", "veloren"]
categories = ["game-development", "simulation"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"
toml = "0.8"

# Database & Storage
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Collections & Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"
dashmap = "6"
lru = "0.12"

# Configuration
config = "0.14"
notify = "7"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

# Cross-crate references
memz-core = { path = "memz-core" }
memz-llm = { path = "memz-llm" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true  # Keep debug info for profiling
