[package]
name = "memz-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Benchmark suite for MEMZ — CI-enforced performance targets"

[dependencies]
memz-core = { path = "../memz-core" }
memz-veloren = { path = "../memz-veloren" }
criterion = { workspace = true }

[[bench]]
name = "memory_system"
harness = false
