[package]
name = "memz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Game-agnostic persistent memory library for characters — memory types, storage, retrieval, decay"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

