[package]
name = "memz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Game-agnostic persistent memory library for characters — memory types, storage, retrieval, decay"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
instant-distance = "0.6"

# Optional: real ONNX-based embedding provider
fastembed = { version = "4", optional = true }

[features]
default = []
onnx = ["dep:fastembed"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

