[package]
name = "memz-veloren"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Veloren integration for MEMZ — ECS components, systems, hooks"

[dependencies]
memz-core = { path = "../memz-core" }
memz-llm = { path = "../memz-llm" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
